force-app/main/default/objects/vlocity_ps__ServiceLevelAgreement__c/vlocity_ps__ServiceLevelAgreement__c.object-meta.xml
<CustomObject>
    <label>Service Level Agreement</label>
    <nameField>
        <label>SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Level Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>