force-app/main/default/objects/vlocity_ps__ServiceLevelAgreement__c/fields/vlocity_ps__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Service Level Agreements</relationshipLabel>
    <relationshipName>ServiceLevelAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>