force-app/main/default/objects/vlocity_ps__ServiceLevelAgreement__c/fields/vlocity_ps__Severity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>