force-app/main/default/objects/vlocity_ps__ServiceLevelAgreement__c/fields/vlocity_ps__TimeToComplete__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TimeToComplete__c</fullName>
    <label>Time to Complete (in hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>